renamed some top level folders, fixed refs - webhook -> hub - api -> sub
